# client-server-poker-app

./: .gitignore  CMakeLists.txt  client.cpp  main.cpp  server.cpp
src/: client.cpp  main.cpp  rezia.txt  server.cpp
src/enums/: Face.h  HandRanking.h  Moves.h  Seat.h  Suit.h
src/headers/: Card.h  Command.h  Player.h  PokerHand.h  PokerTable.h  client.h  server.h
src/objects/: Card.cpp  Command.cpp  Player.cpp  PokerHand.cpp  PokerTable.cpp
